# 3D_Viewer_CPP

./: README.md
src/: CMakeLists.txt  Makefile
src/controller/: controller.cpp  controller.h
src/model/: geometry.cpp  geometry.h  io.cpp  io.h  model.cpp  model.h  strategies.cpp  strategies.h
src/view/: main.cpp  mainwindow.cpp  mainwindow.h  modelwidget.cpp  modelwidget.h  openglwidget.cpp  rendering.cpp  rendering.h
